Nuevo inicio y transacciones en Ventas y Gastos